--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-
   "scripts": {
     "build": "webpack"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^3.11.0"
+    "css-loader": "^0.28.10",
+    "csv-loader": "^2.1.1",
+    "file-loader": "^1.1.9",
+    "style-loader": "^0.20.2",
+    "webpack": "^3.11.0",
+    "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.5"
