--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.18",
     "css-loader": "^0.28.10",
     "csv-loader": "^2.1.1",
     "file-loader": "^1.1.9",
+    "html-webpack-plugin": "^2.30.1",
     "style-loader": "^0.20.2",
     "webpack": "^3.11.0",
     "xml-loader": "^1.2.1"
